--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Milky | Contact</title>
+    <title>Milking | Contact</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -66,7 +66,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0">Milky</h1>
+            <h1 class="m-0">Milking Machine</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -164,7 +164,7 @@
                         </div>
                         <div class="ms-3">
                             <h6>Our Office</h6>
-                            <span>123 Street, New York, USA</span>
+                            <span>Survey No.179/3, Shirasgaon Bodakha, Madhe Vadgaon-Chimbhala Road, Tal-Shrigonda, Dist-Ahmednagar, Pin Code:413726, Maharashtra, India.</span>
                         </div>
                     </div>
                     <div class="d-flex border-bottom pb-3 mb-3">
@@ -173,7 +173,8 @@
                         </div>
                         <div class="ms-3">
                             <h6>Call Us</h6>
-                            <span>+012 345 67890</span>
+                            <span>+91 9850433232
+                                +91 8888633232</span>
                         </div>
                     </div>
                     <div class="d-flex border-bottom-0 pb-3 mb-3">
@@ -182,12 +183,12 @@
                         </div>
                         <div class="ms-3">
                             <h6>Mail Us</h6>
-                            <span>info@example.com</span>
+                            <span>shrisiddhivinayaksales09@gmail.com</span>
                         </div>
                     </div>
 
                     <iframe class="w-100 rounded"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7561.953882465307!2d74.60733617357369!3d18.62010688565237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc340a203da5d43%3A0x88cffff341cfae38!2sMadhewadgaon%2C+Gorewasti%2C+Maharashtra+413726!5e0!3m2!1sen!2sin!4v1543483434931"
                     frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
                     tabindex="0"></iframe>
                 </div>
@@ -203,9 +204,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Survey No.179/3, Shirasgaon Bodakha, Madhe Vadgaon-Chimbhala Road, Tal-Shrigonda, Dist-Ahmednagar, Pin Code:413726, Maharashtra, India.</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9850433232
++91 8888633232</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>shrisiddhivinayaksales09@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
