--- a/feature.html
+++ b/feature.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Milky | Features</title>
+    <title>Milking Machines | Features</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -55,7 +55,8 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 bg-secondary d-inline-flex align-items-center text-dark py-2 px-4">
                     <span class="me-2 fw-semi-bold"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span>+012 345 6789</span>
+                    <span>+91 9850433232
++91 8888633232</span>
                 </div>
             </div>
         </div>
@@ -66,7 +67,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0">Milky</h1>
+            <h1 class="m-0">Milking</h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -120,11 +121,11 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="section-title bg-white text-start text-primary pe-3">Why Us!</p>
                     <h1 class="mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">People choose us because of our commitment to providing the best quality products, our dedication to customer service, and our competitive prices.Our products are made with the freshest ingredients and are free from preservatives and additives.</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of milk</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of cheese</p>
+                    <p class="mb-4">People choose us because of our commitment to providing the best quality products, our dedication to customer service, and our competitive prices.</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of machines</p>
+                <!--    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of cheese</p>
                     <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of  yogurt</p>
-                    
+                -->
                 </div>
                 <div class="col-lg-6">
                     <div class="rounded overflow-hidden">
@@ -132,11 +133,11 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="text-center bg-primary py-5 px-4">
                                     <img class="img-fluid mb-4" src="img/experience.png" alt="">
-                                    <h1 class="display-6 text-white" data-toggle="counter-up">25</h1>
+                                    <h1 class="display-6 text-white" data-toggle="counter-up">9</h1>
                                     <span class="fs-5 fw-semi-bold text-secondary">Years Experience</span>
                                 </div>
                             </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
+                         <!--   <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                                 <div class="text-center bg-secondary py-5 px-4">
                                     <img class="img-fluid mb-4" src="img/award.png" alt="">
                                     <h1 class="display-6" data-toggle="counter-up">183</h1>
@@ -157,6 +158,7 @@
                                     <span class="fs-5 fw-semi-bold text-secondary">Happy Clients</span>
                                 </div>
                             </div>
+                        -->
                         </div>
                     </div>
                 </div>
@@ -172,9 +174,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Survey No.179/3, Shirasgaon Bodakha, Madhe Vadgaon-Chimbhala Road, Tal-Shrigonda, Dist-Ahmednagar, Pin Code:413726, Maharashtra, India.</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9850433232
++91 8888633232</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>shrisiddhivinayaksales09@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
