--- a/about.html
+++ b/about.html
@@ -55,7 +55,8 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 bg-secondary d-inline-flex align-items-center text-dark py-2 px-4">
                     <span class="me-2 fw-semi-bold"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span>+012 345 6789</span>
+                    <span>+91 9850433232
+                        +91 8888633232</span>
                 </div>
             </div>
         </div>
@@ -121,35 +122,47 @@
                     <div class="row g-2">
                         <div class="col-6 position-relative wow fadeIn" data-wow-delay="0.7s">
                             <div class="about-experience bg-secondary rounded">
-                                <h1 class="display-1 mb-0">25</h1>
+                                <h1 class="display-1 mb-0">9</h1>
                                 <small class="fs-5 fw-bold">Years Experience</small>
                             </div>
                         </div>
                         <div class="col-6 wow fadeIn" data-wow-delay="0.1s">
-                            <img class="img-fluid rounded" src="img/service-1.jpg">
+                            <img class="img-fluid rounded" src="img/gallery-1.jpg">
                         </div>
                         <div class="col-6 wow fadeIn" data-wow-delay="0.3s">
-                            <img class="img-fluid rounded" src="img/service-2.jpg">
+                            <img class="img-fluid rounded" src="img/gallery-2.jpg">
                         </div>
                         <div class="col-6 wow fadeIn" data-wow-delay="0.5s">
-                            <img class="img-fluid rounded" src="img/service-3.jpg">
+                            <img class="img-fluid rounded" src="img/gallery-3.jpg">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="section-title bg-white text-start text-primary pe-3">About Us</p>
-                    <h1 class="mb-4">Know About Our Dairy Farm & Our History</h1>
-                    <p class="mb-4">This dairy company is a family-owned business that has been in operation for over 30 years. They specialize in producing high-quality dairy products, such as milk, cheese, yogurt, and ice cream. Their products are made with fresh ingredients and are free of preservatives and artificial flavors. They strive to provide customers with the best quality products at competitive prices. The company is committed to providing excellent customer service and strives to make sure their customers are satisfied with their purchases.</p>
+                    <h1 class="mb-4">Know About Our Machines & Our History</h1>
+                    <p class="mb-4">Shri Siddhivinayak Engineering and Agri Market Founded By Mr. Nandkumar Gadekar and Mr. Rahul Gadekar in 2009. Shri Siddhivinayak Engineering Market comes up with huge range of quality milking machineries. Our vision is very futuristic and big. We manufactured quality and brand product in today's competitive market. We have fully integrated well built manufacturing facility with In house designing our company working as per international standard Rules and Regulation. We have lots of certificate given by Government of India.</p>
                     <div class="row g-5 pt-2 mb-5">
                         <div class="col-sm-6">
-                            <img class="img-fluid mb-4" src="img/service.png" alt="">
-                            <h5 class="mb-3">Dedicated Services</h5>
-                            <span>This dairy company provides a wide range of services to its customers, including milk delivery, cheese production, and ice cream manufacturing</span>
+                            <!--<img class="img-fluid mb-4" src="img/service.png" alt="">-->
+                            <h5 class="mb-3">Our certificates are:</h5>
+                            <span>
+                                    MSME Udyog Aadhar
+                                    NSIC (THE National small Industries Corporation Ltd.)
+                                    Certification Of Import And Export
+                                    Trademark Registration
+                                    ISO 9001:2008 Certification
+                                    Certificartion Of GST
+                            </span>
                         </div>
                         <div class="col-sm-6">
-                            <img class="img-fluid mb-4" src="img/product.png" alt="">
-                            <h5 class="mb-3">Organic Products</h5>
-                            <span>We offer a wide variety of milk, cheese, yogurt, and other dairy products that are sure to please any palate. Our commitment to quality and customer service is unmatched in the industry.</span>
+                            <!--<img class="img-fluid mb-4" src="img/product.png" alt="">-->
+                            <h5 class="mb-3">Our Strength are:</h5>
+                            <span>
+The strength is best quality, Service and satisfaction.
+Our ability to supply hug quantity in short span.
+Company tested technology, leveraging and accumulated experience industry.
+Our company manufactured to international standards, adapted to tropical conditions.
+</span>
                         </div>
                     </div>
                    
@@ -160,6 +173,7 @@
     <!-- About End -->
 
     <!-- Banner Start -->
+     <!--
     <div class="container-fluid banner my-5 py-5" data-parallax="scroll" data-image-src="img/banner.jpg">
         <div class="container py-5">
             <div class="row g-5">
@@ -190,10 +204,12 @@
             </div>
         </div>
     </div>
+-->
     <!-- Banner End -->
 
 
     <!-- Team Start -->
+     <!--
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -240,6 +256,7 @@
             </div>
         </div>
     </div>
+-->
     <!-- Team End -->
 
 
@@ -249,9 +266,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Survey No.179/3, Shirasgaon Bodakha, Madhe Vadgaon-Chimbhala Road, Tal-Shrigonda, Dist-Ahmednagar, Pin Code:413726, Maharashtra, India.</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9850433232
+                        +91 8888633232</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>shrisiddhivinayaksales09@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -278,7 +296,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p></p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
