--- a/gallery.html
+++ b/gallery.html
@@ -118,7 +118,7 @@
         <div class="container">
             <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="section-title bg-white text-center text-primary px-3">Gallery</p>
-                <h1 class="mb-5">Explore Our Dairy Farm Gallery</h1>
+                <h1 class="mb-5">Explore Our Milking Machine Products</h1>
             </div>
             <div class="row g-0">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -189,9 +189,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Survey No.179/3, Shirasgaon Bodakha, Madhe Vadgaon-Chimbhala Road, Tal-Shrigonda, Dist-Ahmednagar, Pin Code:413726, Maharashtra, India.</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9850433232
++91 8888633232</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>shrisiddhivinayaksales09@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -218,7 +219,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p></p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
