--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Milky | HOME</title>
+    <title>Milking machine | HOME</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -55,7 +55,8 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 bg-secondary d-inline-flex align-items-center text-dark py-2 px-4">
                     <span class="me-2 fw-semi-bold"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span>+012 345 6789</span>
+                    <span>+91 9850433232
+                        +91 8888633232</span>
                 </div>
             </div>
         </div>
@@ -66,7 +67,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5">
         <a href="index.html" class="navbar-brand d-flex align-items-center">
-            <h1 class="m-0">Milky</h1>
+            <h1 class="m-0">Siddhivinayak Milking Machine </h1>
         </a>
         <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -107,8 +108,8 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-8 text-start">
-                                    <p class="fs-4 text-white">Welcome to our dairy farm</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">The Farm of Dairy products</h1>
+                                    <p class="fs-4 text-white">Welcome to our Milking Machine </p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">The Farm of Milking Machine </h1>
                                     <a href="product.html" class="btn btn-secondary rounded-pill py-3 px-5 animated slideInRight">Explore More</a>
                                 </div>
                             </div>
@@ -121,8 +122,8 @@
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-8 text-end">
-                                    <p class="fs-4 text-white">Welcome to our dairy farm</p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Best Organic Dairy Products</h1>
+                                    <p class="fs-4 text-white">Welcome to our Milking Machine </p>
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Best Milking Machines </h1>
                                     <a href="" class="btn btn-secondary rounded-pill py-3 px-5 animated slideInLeft">Explore More</a>
                                 </div>
                             </div>
@@ -153,35 +154,43 @@
                     <div class="row g-2">
                         <div class="col-6 position-relative wow fadeIn" data-wow-delay="0.7s">
                             <div class="about-experience bg-secondary rounded">
-                                <h1 class="display-1 mb-0">25</h1>
+                                <h1 class="display-1 mb-0">09</h1>
                                 <small class="fs-5 fw-bold">Years Experience</small>
                             </div>
                         </div>
                         <div class="col-6 wow fadeIn" data-wow-delay="0.1s">
-                            <img class="img-fluid rounded" src="img/service-1.jpg">
+                            <img class="img-fluid rounded" src="img/gallery-1.jpg">
                         </div>
                         <div class="col-6 wow fadeIn" data-wow-delay="0.3s">
-                            <img class="img-fluid rounded" src="img/service-2.jpg">
+                            <img class="img-fluid rounded" src="img/gallery-2.jpg">
                         </div>
                         <div class="col-6 wow fadeIn" data-wow-delay="0.5s">
-                            <img class="img-fluid rounded" src="img/service-3.jpg">
+                            <img class="img-fluid rounded" src="img/gallery-3.jpg">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="section-title bg-white text-start text-primary pe-3">About Us</p>
-                    <h1 class="mb-4">Know About Our Dairy Farm & Our History</h1>
-                    <p class="mb-4">This dairy company is a family-owned business that has been in operation for over 25 years. They specialize in producing high-quality dairy products, such as milk, cheese, yogurt, and ice cream. Their products are made with fresh ingredients and are free of preservatives and artificial flavors.</p>
+                    <h1 class="mb-4">Know About Our Machines and Our History</h1>
+                    <p class="mb-4">Shri Siddhivinayak Engineering and Agri Market Founded By Mr. Nandkumar Gadekar and Mr. Rahul Gadekar in 2009. Shri Siddhivinayak Engineering Market comes up with huge range of quality milking machineries. Our vision is very futuristic and big. We manufactured quality and brand product in today's competitive market. We have fully integrated well built manufacturing facility with In house designing our company working as per international standard Rules and Regulation. We have lots of certificate given by Government of India.</p>
                     <div class="row g-5 pt-2 mb-5">
                         <div class="col-sm-6">
-                            <img class="img-fluid mb-4" src="img/service.png" alt="">
-                            <h5 class="mb-3">Dedicated Services</h5>
-                            <span>This dairy company provides a wide range of services to its customers, including milk delivery, cheese production, and ice cream manufacturing</span>
+                            <!--<img class="img-fluid mb-4" src="img/service.png" alt="">-->
+                            <h5 class="mb-3">Our certificates are:</h5>
+                            <span> MSME Udyog Aadhar
+                                    NSIC (THE National small Industries Corporation Ltd.)
+                                    Certification Of Import And Export
+                                    Trademark Registration
+                                    ISO 9001:2008 Certification
+                                    Certificartion Of GST</span>
                         </div>
                         <div class="col-sm-6">
-                            <img class="img-fluid mb-4" src="img/product.png" alt="">
-                            <h5 class="mb-3">Organic Products</h5>
-                            <span>We offer a wide variety of milk, cheese, yogurt, and other dairy products that are sure to please any palate. Our commitment to quality and customer service is unmatched in the industry.</span>
+                            <!--<img class="img-fluid mb-4" src="img/product.png" alt="">-->
+                            <h5 class="mb-3">Our Strength are:</h5>
+                            <span>The strength is best quality, Service and satisfaction.
+Our ability to supply hug quantity in short span.
+Company tested technology, leveraging and accumulated experience industry.
+Our company manufactured to international standards, adapted to tropical conditions.</span>
                         </div>
                     </div>
                     <a class="btn btn-secondary rounded-pill py-3 px-5" href="about.html">Explore More</a>
@@ -199,10 +208,10 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="section-title bg-white text-start text-primary pe-3">Why Us!</p>
                     <h1 class="mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">People choose us because of our commitment to providing the best quality products, our dedication to customer service, and our competitive prices.Our products are made with the freshest ingredients and are free from preservatives and additives.</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of milk</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of cheese</p>
-                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of  yogurt</p>
+                    <p class="mb-4">People choose us because of our commitment to providing the best quality products, our dedication to customer service, and our competitive prices.</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of products</p>
+                  <!--  <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of cheese</p>
+                    <p><i class="fa fa-check text-primary me-3"></i>We offer a wide variety of  yogurt</p>-->
                     <a class="btn btn-secondary rounded-pill py-3 px-5 mt-3" href="service.html">Explore More</a>
                 </div>
                 <div class="col-lg-6">
@@ -211,11 +220,11 @@
                             <div class="col-sm-6 wow fadeIn" data-wow-delay="0.1s">
                                 <div class="text-center bg-primary py-5 px-4">
                                     <img class="img-fluid mb-4" src="img/experience.png" alt="">
-                                    <h1 class="display-6 text-white" data-toggle="counter-up">25</h1>
+                                    <h1 class="display-6 text-white" data-toggle="counter-up">09</h1>
                                     <span class="fs-5 fw-semi-bold text-secondary">Years Experience</span>
                                 </div>
                             </div>
-                            <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
+                          <!--  <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                                 <div class="text-center bg-secondary py-5 px-4">
                                     <img class="img-fluid mb-4" src="img/award.png" alt="">
                                     <h1 class="display-6" data-toggle="counter-up">183</h1>
@@ -236,6 +245,7 @@
                                     <span class="fs-5 fw-semi-bold text-secondary">Happy Clients</span>
                                 </div>
                             </div>
+                        -->
                         </div>
                     </div>
                 </div>
@@ -245,7 +255,7 @@
     <!-- Features End -->
 
 
-    <!-- Banner Start -->
+   <!-- Banner Start
     <div class="container-fluid banner my-5 py-5" data-parallax="scroll" data-image-src="img/banner.jpg">
         <div class="container py-5">
             <div class="row g-5">
@@ -276,10 +286,11 @@
             </div>
         </div>
     </div>
-    <!-- Banner End -->
+     Banner End -->
 
 
     <!-- Service Start -->
+     <!--
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -335,6 +346,7 @@
             </div>
         </div>
     </div>
+-->
     <!-- Service End -->
 
 
@@ -403,6 +415,7 @@
 
 
     <!-- Product Start -->
+     <!--
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -477,10 +490,12 @@
             </div>
         </div>
     </div>
+-->
     <!-- Product End -->
 
 
     <!-- Team Start -->
+     <!--
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -526,11 +541,12 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Team End -->
 
 
     <!-- Testimonial Start -->
+     <!--
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
@@ -577,6 +593,7 @@
             </div>
         </div>
     </div>
+-->
     <!-- Testimonial End -->
 
 
@@ -586,9 +603,10 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Survey No.179/3,Shirasgaon Bodakha, Madhe Vadgaon-Chimbhala Road, Tal-Shrigonda, Dist-Ahmednagar, Pin Code-413726, Maharashtra, India.</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9850433232
+                                                                        +91 8888633232</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>shrisiddhivinayaksales09@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-secondary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -607,12 +625,13 @@
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Business Hours</h5>
                     <p class="mb-1">Monday - Friday</p>
-                    <h6 class="text-light">09:00 am - 07:00 pm</h6>
+                    <h6 class="text-light">06:00 am - 08:00 pm</h6>
                     <p class="mb-1">Saturday</p>
-                    <h6 class="text-light">09:00 am - 12:00 pm</h6>
+                    <h6 class="text-light">06:00 am - 8:00 pm</h6>
                     <p class="mb-1">Sunday</p>
                     <h6 class="text-light">Closed</h6>
                 </div>
+<!--                 
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Newsletter</h5>
                     <p>Dont miss our updates. Sign in to our news letter today</p>
@@ -620,6 +639,7 @@
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-secondary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
+                -->
                 </div>
             </div>
         </div>
